Make about me content on main

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             </div>
         </div>
     </header>
-    
+    <main>
+        <div id="About">
+            <h2> About Me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores corporis totam facilis, temporibus reiciendis iure! Veritatis, possimus doloribus voluptatem officia labore laborum perspiciatis, tempora architecto blanditiis, sint voluptatibus illo eos quaerat nisi. Numquam, ut quasi. Suscipit esse amet excepturi, dignissimos at similique quas nulla fugiat, id inventore impedit consectetur explicabo est molestiae aperiam porro! Saepe tenetur nulla quidem illum possimus ratione accusantium quis similique, explicabo quisquam ad, error maiores unde ea ut distinctio iste delectus dicta placeat. Officia, sequi, velit harum vitae corrupti aliquid nam quis consequatur culpa quos neque laboriosam cupiditate ipsam qui reprehenderit explicabo quae architecto doloribus exercitationem veniam debitis minima non? Harum nam illo maiores, quibusdam mollitia ad, tenetur architecto dolorem porro pariatur velit amet voluptate doloribus modi similique dolore possimus beatae impedit neque! A cupiditate sapiente ipsa doloribus? Delectus incidunt ut architecto assumenda sunt! Hic velit sequi amet culpa fugit adipisci ullam debitis at consequuntur.</p>
+        </div>
+
+        <div id="Contact"></div>
+    </main>
 </body>
 </html>
