Make Skill content on main

--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores corporis totam facilis, temporibus reiciendis iure! Veritatis, possimus doloribus voluptatem officia labore laborum perspiciatis, tempora architecto blanditiis, sint voluptatibus illo eos quaerat nisi. Numquam, ut quasi. Suscipit esse amet excepturi, dignissimos at similique quas nulla fugiat, id inventore impedit consectetur explicabo est molestiae aperiam porro! Saepe tenetur nulla quidem illum possimus ratione accusantium quis similique, explicabo quisquam ad, error maiores unde ea ut distinctio iste delectus dicta placeat. Officia, sequi, velit harum vitae corrupti aliquid nam quis consequatur culpa quos neque laboriosam cupiditate ipsam qui reprehenderit explicabo quae architecto doloribus exercitationem veniam debitis minima non? Harum nam illo maiores, quibusdam mollitia ad, tenetur architecto dolorem porro pariatur velit amet voluptate doloribus modi similique dolore possimus beatae impedit neque! A cupiditate sapiente ipsa doloribus? Delectus incidunt ut architecto assumenda sunt! Hic velit sequi amet culpa fugit adipisci ullam debitis at consequuntur.</p>
         </div>
 
+        <div id="Skills">
+            <h2>Skills</h2>
+                <div class="skill-main-grid">
+                    <div class="skill-grid1">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure!</p>
+                    </div>
+                    <div class="skill-grid2">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                    </div>
+                    <div class="skill-grid3">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                    </div>
+                    <div class="skill-grid4">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                    </div>
+                </div>
+        </div>
+
         <div id="Contact"></div>
     </main>
 </body>
