Make footer form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="portfolio-profile">
                     <img alt="profile-pic" img src="initialpic.jpeg">
                     <h1>Josiah Joseph S. Autor</h1>
-                    <h2>Programmer</h2>
+                    <h2>I.T. Student</h2>
                 </div>
             </div>
         </div>
@@ -29,27 +29,45 @@
     <main>
         <div id="About">
             <h2> About Me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores corporis totam facilis, temporibus reiciendis iure! Veritatis, possimus doloribus voluptatem officia labore laborum perspiciatis, tempora architecto blanditiis, sint voluptatibus illo eos quaerat nisi. Numquam, ut quasi. Suscipit esse amet excepturi, dignissimos at similique quas nulla fugiat, id inventore impedit consectetur explicabo est molestiae aperiam porro! Saepe tenetur nulla quidem illum possimus ratione accusantium quis similique, explicabo quisquam ad, error maiores unde ea ut distinctio iste delectus dicta placeat. Officia, sequi, velit harum vitae corrupti aliquid nam quis consequatur culpa quos neque laboriosam cupiditate ipsam qui reprehenderit explicabo quae architecto doloribus exercitationem veniam debitis minima non? Harum nam illo maiores, quibusdam mollitia ad, tenetur architecto dolorem porro pariatur velit amet voluptate doloribus modi similique dolore possimus beatae impedit neque! A cupiditate sapiente ipsa doloribus? Delectus incidunt ut architecto assumenda sunt! Hic velit sequi amet culpa fugit adipisci ullam debitis at consequuntur.</p>
+            <p>I am a 19 years old student and currently taking Second Year BS Information Technology at Adventist University of the Philippines. </p>
         </div>
 
         <div id="Skills">
             <h2>Skills</h2>
                 <div class="skill-main-grid">
                     <div class="skill-grid1">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure!</p>
+                        <h3>Adept at Photoshop</h3>
+                        <p>I have a 6 year experience using Photoshop. Takes editting request for various events. </p>
                     </div>
                     <div class="skill-grid2">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                        <h3>Adaptability</h3>
+                        <p>I can be consistent in doing my work in different environments</p>
                     </div>
                     <div class="skill-grid3">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                        <h3>Problem-solving</h3>
+                        <p>I put more attention to detail. I collaborate with other for making the best decision out of a problem.</p>
                     </div>
                     <div class="skill-grid4">
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum magnam rem dignissimos ad iure provident voluptatum, cumque quas sequi a sed, ea repellat ut minima voluptatibus quae quam id exercitationem dolores unde laboriosam placeat dolorem labore! Maiores neque minus commodi eos eius quod? Sint consectetur sed dolorum aliquid sunt. Quidem tenetur odio placeat commodi exercitationem maxime voluptatum unde nam magnam quo, consectetur laboriosam pariatur eligendi! Et reiciendis doloribus enim doloremque. Vel atque dolores id iure</p>
+                        <h3>Time management</h3>
+                        <p>I do things as organized as possible. Completing task and project before deadlines while also maintaining work-life balance.</p>
+                    </div>
+                </div>
+        </div>
+        <div id="Skills2">
+            <h2>Languages</h2>
+                <div class="skill-main-grid2">
+                    <div class="skill-grid1">
+                        <h3>Java</h3>
+                        
+                    </div>
+                    <div class="skill-grid2">
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="skill-grid3">
+                        <h3>Javascript</h3>                   
+                    </div>
+                    <div class="skill-grid4">
+                        <h3>SQL</h3>
                     </div>
                 </div>
         </div>
@@ -57,4 +75,28 @@
         <div id="Contact"></div>
     </main>
 </body>
+<footer>
+    <form class="portfolio-form">
+        <h2>Send me a message.</h2>
+        <div class="form-row">
+            <label class="form-label">Subject:</label>
+            <div class="form-input">
+                <input id="mailSubject" class="form-input-text" type="text">
+            </div>
+        </div>
+        <div class="form-row">
+            <label class="form-label">Message:</label>
+            <div class="form-input">
+                <textarea id="mailMessage" class="form-input-textarea"></textarea>
+            </div>
+        </div>
+        <div class="form-submit">
+            <a onmouseover="appendMailTo()" id="sendMail" href="mailto:autorjosiah@gmail.com" class="btn-submit">Submit</a>
+        </div>
+    </form>
+    <div class="footer">
+    Copyright &copy; Professional Elective 1 S.Y.<span id="getYear"></span>
+    </div>
+</footer>
+ <script src="main.js"></script>
 </html>
