--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         <div id="Skills2">
             <h2>Languages</h2>
                 <div class="skill-main-grid2">
-                    <div class="skill-grid1">
+                    <div class="skill-grid1-1">
                         <h3>Java</h3>
                         
                     </div>
-                    <div class="skill-grid2">
+                    <div class="skill-grid2-2">
                         <h3>HTML</h3>
                     </div>
-                    <div class="skill-grid3">
+                    <div class="skill-grid3-3">
                         <h3>Javascript</h3>                   
                     </div>
-                    <div class="skill-grid4">
+                    <div class="skill-grid4-4">
                         <h3>SQL</h3>
                     </div>
                 </div>
